--- a/PatientInfoModule/Views/Info/IdentityDocumentView.xaml
+++ b/PatientInfoModule/Views/Info/IdentityDocumentView.xaml
@@ -4,9 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
-             xmlns:misc="clr-namespace:Core.Wpf.Misc;assembly=Core.Wpf"
+             xmlns:wpfMisc="clr-namespace:Core.Wpf.Misc;assembly=Core.Wpf"
              xmlns:viewModels="clr-namespace:PatientInfoModule.ViewModels"
              xmlns:editors="http://wpfcontrols.com/"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:behaviors="clr-namespace:Core.Wpf.Behaviors;assembly=Core.Wpf"
+             xmlns:misc="clr-namespace:PatientInfoModule.Misc"
              mc:Ignorable="d" 
              d:DesignHeight="300"
              d:DesignWidth="450" 
@@ -17,15 +20,15 @@
                 <ResourceDictionary Source="pack://application:,,,/Core.Wpf;Component/Themes/Generic.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <converters:Converter x:Key="IsActiveToTextConverter">
-                <converters:ConverterItem From="{x:Static misc:StaticBoolean.True}"
+                <converters:ConverterItem From="{x:Static wpfMisc:StaticBoolean.True}"
                                           To="Действующий документ" />
-                <converters:ConverterItem From="{x:Static misc:StaticBoolean.False}"
+                <converters:ConverterItem From="{x:Static wpfMisc:StaticBoolean.False}"
                                           To="Недействующий документ" />
             </converters:Converter>
             <converters:Converter x:Key="IsActiveToForegroundConverter">
-                <converters:ConverterItem From="{x:Static misc:StaticBoolean.True}"
+                <converters:ConverterItem From="{x:Static wpfMisc:StaticBoolean.True}"
                                           To="{x:Static Brushes.Green}" />
-                <converters:ConverterItem From="{x:Static misc:StaticBoolean.False}"
+                <converters:ConverterItem From="{x:Static wpfMisc:StaticBoolean.False}"
                                           To="{x:Static Brushes.Red}" />
             </converters:Converter>
         </ResourceDictionary>
@@ -75,7 +78,11 @@
                  Grid.Column="1"
                  HorizontalAlignment="Stretch"
                  Text="{Binding Series, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
-                 Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}" />
+                 Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}">
+            <i:Interaction.Behaviors>
+                <behaviors:InputHelperBehavior InputHelper="{Binding SeriesInputHelper}" />
+            </i:Interaction.Behaviors>
+        </TextBox>
         <TextBlock Grid.Row="2"
                    Grid.Column="2"
                    Text="Номер" />
@@ -83,7 +90,11 @@
                  Grid.Column="3"
                  HorizontalAlignment="Stretch"
                  Text="{Binding Number, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
-                 Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}" />
+                 Validation.ErrorTemplate="{StaticResource ValidationTemplateRightIcon}">
+            <i:Interaction.Behaviors>
+                <behaviors:InputHelperBehavior InputHelper="{Binding NumberInputHelper}" />
+            </i:Interaction.Behaviors>
+        </TextBox>
         <TextBlock Grid.Row="3"
                    Grid.Column="0"
                    Text="Кем выдан" />
